added method swagger
