# src/server/api/routes/voyages.router.js
@@ -47,11 +47,11 @@ router.post(
 
 //ENDPOINT: /api/voyages/:voyage_id/vessel-reports/?offset=0&limit=50&orderBy="desc"
 router.get(
-  "/:id/vessel-reports/?",
+  "/:id/vessel-reports?",
   authorizeUser(ROLES.SUPER_USER, ROLES.ADMIN, ROLES.OPERATOR),
   (req, res, next) => {
     vesselReportsController
-      .getVesselsReportByVoyageIdWithParams(req.params.id, req.query)
+      .getVesselsReportByVoyageId(req.params.id, req.query)
       .then(result => res.json(result))
       .catch(next);
   }
